--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     let img3;
     function preload() {
   img = loadImage('human.jpeg');
-  img = loadImageTwo('bird.jpg');
-  img = loadImageThree('enemy.png');
+  img2 = loadImage('bird.jpg');
+  img3 = loadImage('enemy.png');
 }
      function setup() {
          createCanvas(w,h);
