--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 }
      function setup() {
          createCanvas(w,h);
-         image(img, 50, 50);
-         image(img2, 50, 50);
-         image(img3, 50, 50);
+         image(img, 50px, 50px);
+         image(img2, 50px, 50px);
+         image(img3, 50px, 50px);
     }
     
     function draw() {
