--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     let img3;
     function preload() {
   img = loadImage('human.jpeg');
-  img2 = loadImage('bird.jpg');
+  img2 = loadImage('bird.png');
   img3 = loadImage('enemy.png');
 }
      function setup() {
