--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       margin:0;
       padding:0;
       overflow:hidden;
-      background-image(img4);
     }
     
      #points {
@@ -24,7 +23,7 @@
     }
   </style>
   </head>
-  <body id="body">
+  <body>
     <div id="points">
     <h1 id="point"></h1>
   </div>
@@ -56,7 +55,7 @@
     }
     
     function draw() {
-      background(255);
+      background(img4);
       jumper.show();
       jumper.update();
       jumper.move();
