--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   img = loadImage('human.jpeg');
   img2 = loadImage('bird.jpg');
   img3 = loadImage('enemy.png');
-  img4 = loadImage('background.png');
+  img4 = loadImage('background.jpg');
 
 }
      function setup() {
