--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     let img4;
     function preload() {
   img = loadImage('human.jpeg');
-  img2 = loadImage('bird.png');
+  img2 = loadImage('star.png');
   img3 = loadImage('enemy.png');
     img4 = loadImage('background.png');
 
