--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     function preload() {
   img = loadImage('moon.jpg');
   img2 = loadImage('star.png');
-  img3 = loadImage('enemy.png');
+  img3 = loadImage('star.png');
     img4 = loadImage('background.png');
 
 }
@@ -53,7 +53,7 @@
       img2.loadPixels(w,h);
       img2.resize(100,100);
      img3.loadPixels(w,h);
-      img3.resize(200,200);
+      img3.resize(100,100);
            img4.loadPixels(w,h);
 
     }
