--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     let img3;
     let img4;
     function preload() {
-  img = loadImage('moon.jpg');
+  img = loadImage('airp.png');
   img2 = loadImage('star.png');
   img3 = loadImage('star.png');
     img4 = loadImage('background.png');
