--- a/index.html
+++ b/index.html
@@ -39,11 +39,13 @@
     let img2;
     let img3;
     let img4;
+      let img5;
     function preload() {
   img = loadImage('airplane.png');
   img2 = loadImage('star.png');
   img3 = loadImage('star.png');
     img4 = loadImage('background.png');
+      img5 = loadImage('cloud.png');
 }
      function setup() {
          createCanvas(w,h);
@@ -53,7 +55,9 @@
       img2.resize(100,100);
      img3.loadPixels(w,h);
       img3.resize(100,100);
-           img4.loadPixels(w,h);
+         img4.loadPixels(w,h);
+       img5.loadPixels(w,h);
+      img5.resize(200,200);
     }
     
     function draw() {
