--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       hit = collideRectCircle(barrier.x,barrier.y, barrier.width,barrier.height,jumper.x, jumper.y,100);
       if (hit === true) {
         noLoop();
-        window.alert('game over');
+        window.alert("game over");
          button= createButton("restart");
         button.position(500,500);
          button.mousePressed(reload);
