--- a/indexp5gravity.html
+++ b/indexp5gravity.html
@@ -73,7 +73,7 @@ color:white;
       background(img4);
       jumper.show();
       jumper.update();
-      //jumper.move();
+      jumper.move();
       barrier.show();
       barrier.update();
       barrier.move();
