--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
         <button><a href="game.html">Start</a></button>
     </div>
   <div id="instructions">
-    Press 'spacebar' to jump. 
-    A to move left and D to move right. 
+    Touch the screen to jump. 
     For every star avoided, one point is added. 
     Press "r" to refresh the page. 
 </div>
