--- a/game.html
+++ b/game.html
@@ -117,6 +117,9 @@
       function touchStarted(){
       jumper.up();
     }
+      function reload (){
+     window.location.reload();
+      }
     
     
     </script>
